src/test/deca/etapeC/valid/modulo1.deca
// Description:
//   Test du modulo
//
// Resultats:
// ima_output: 3
//

{
    int a = 7;
    a = a % 4;
    println(a);
}