src/test/deca/etapeC/invalid/non_init_var.deca
// Description:
//   Accès à des variables non initialisées
//
// Resultats:
//  ima_output:  ERREUR
//

{
    int a;
    int b = a + 1;
    println(a);
}